--- a/client/src/App/Messages/index.css
+++ b/client/src/App/Messages/index.css
@@ -1,8 +1,26 @@
 .Messages {
-    height: 95vh;
+  height: 95vh;
+  overflow: auto;
 }
 
-h5 {
-    margin: 0px;
-    padding: 0px;
+.Message {
+  max-width: 100px;
+  margin: 10px 5px 0px 0px;
+  position: relative;
+  background-color: green;
+  min-height: 100px;
+  right: 0
+}
+
+.Message::after {
+	content: ' ';
+	position: absolute;
+	width: 0;
+	height: 0;
+	left: 0px;
+  right: auto;
+  top: auto;
+	bottom: -20px;
+	border: 22px solid;
+	border-color: transparent transparent transparent lightyellow;
 }
