feat: header add and fix minor bugs

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,3 +1,5 @@
-.App {
-  /* text-align: center; */
+.App-header{
+  padding: 5px 15px;
+  height: calc(5vh - 10px);
+  box-shadow: 0px 0px 8px 0px #e5e5e5;
 }
