--- a/client/src/App/Messages/index.css
+++ b/client/src/App/Messages/index.css
@@ -1,5 +1,6 @@
 .Messages {
-  height: 90vh;
+  height: calc(90vh - 20px);
+  padding: 10px 0px;
   overflow: auto;
 }
 
@@ -25,7 +26,7 @@
   display: flex;
   align-items: center;
   max-width: 350px;
-  margin: 10px 40px;
+  margin: 10px 15px;
   padding: 0 15px;
   position: relative;
 }
